--- a/app.json
+++ b/app.json
@@ -27,7 +27,10 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      {
+        "locationAlwaysAndWhenInUsePermission": "Allow to use your location."
+      }
     ],
     "experiments": {
       "typedRoutes": true
