--- a/app.json
+++ b/app.json
@@ -27,10 +27,10 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router",
-      {
-        "locationAlwaysAndWhenInUsePermission": "Allow to use your location."
-      }
+      "expo-router"
+      // {
+      //   "locationAlwaysAndWhenInUsePermission": "Allow to use your location."
+      // }
     ],
     "experiments": {
       "typedRoutes": true
